--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,26 +1,55 @@
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
 body{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin:100px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    font-family:'Roboto', sans-serif;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
-.title1{
+b{
+    font-weight: bold;
+}
+.texto{
+    width: 600px;
+}
+
+h1{
+    
+    margin-bottom: 30px;
+    font-size: 25px;
+    font-weight: bold;
     color: rgb(49, 47, 47);
-    font-family:'Times New Roman', Times, serif;
 }
-.text1{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
+p{
+    margin-top: 10px;
+    font-size: 14px;
     color:rgb(70, 70, 70);
 }
 .subtitle{
+    margin-bottom: 10px;
+    margin-top:10px;
     color: rgb(39, 39, 39);
     font-weight: bold;
 }
 
-.subtitleM{
+h3{
+    margin-top: 10px;
+    margin-bottom: 10px;
     color: rgb(39, 39, 39);
-    font-weight: bold;
-    font-size: 25px;
+    font-weight: 600;
 }
 
-
-
+li{
+    font-family: 'Roboto', sans-serif;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
