--- a/exercicios/treino-de-abdomen.css
+++ b/exercicios/treino-de-abdomen.css
@@ -1,64 +1,69 @@
-
-*{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
-body{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    font-family:'Roboto', sans-serif;
+body {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
 }
-img{
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-.bold{
-    font-weight: 600;
-}
-.texto{
-    width: 660px;
+img {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.title1{
-    margin-top: 40px;
-    margin-bottom: 30px;
-    font-size: 25px;
-    font-weight: bold;
-    color: rgb(49, 47, 47);
-}
-.text1{
-    margin-top: 10px;
-    font-size: 16px;
-    color:rgb(70, 70, 70);
-}
-.subtitle{
-    margin-bottom: 10px;
-    margin-top:20px;
-    color: rgb(39, 39, 39);
-    font-weight: bold;
+i {
+  transform: translateX(-200px);
+  font-size: 35px;
 }
 
-.title2{
-    color: rgb(49, 47, 47);
-    margin-top: 13px;
-    margin-bottom: 13px;
-    color: rgb(39, 39, 39);
-    font-weight: 600;
-    font-size: 20px;
+.bold {
+  font-weight: 600;
+}
+.texto {
+  width: 660px;
 }
 
-li{
-    font-family: 'Roboto', sans-serif;
-    margin-top: 13px;
-    margin-bottom: 10px;
+.title1 {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  font-size: 25px;
+  font-weight: bold;
+  color: rgb(49, 47, 47);
+}
+.text1 {
+  margin-top: 10px;
+  font-size: 16px;
+  color: rgb(70, 70, 70);
+}
+.subtitle {
+  margin-bottom: 10px;
+  margin-top: 20px;
+  color: rgb(39, 39, 39);
+  font-weight: bold;
 }
 
-.container{
-    width: 100%;
+.title2 {
+  color: rgb(49, 47, 47);
+  margin-top: 13px;
+  margin-bottom: 13px;
+  color: rgb(39, 39, 39);
+  font-weight: 600;
+  font-size: 20px;
+}
+
+li {
+  font-family: 'Roboto', sans-serif;
+  margin-top: 13px;
+  margin-bottom: 10px;
+}
+
+.container {
+  width: 100%;
 }
