--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
+  min-width: 275px;
 }
 
 .container-pesquisa i {
@@ -129,7 +130,7 @@ body {
   float: left;
   padding: 0;
   color: #0f172a;
-  font-size: 16px;
+  font-size: 1rem;
   transition: all 0.5s;
   line-height: 40px;
 }
