Adicionado ActiveLink no Menu, melhorias e correçoes responsivo

--- a/css/style.css
+++ b/css/style.css
@@ -16,25 +16,22 @@ body {
   align-items: center;
 }
 .fotos {
-  margin:auto;
+  margin: auto;
   width: 50%;
   height: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.fa-link::before{
- content: "";
-  
+.fa-link::before {
+  content: '';
 }
 .fa-sharp {
   color: #9f1239;
   font-size: 2.5rem;
-  position: sticky;
-  top: 110px;
   margin-top: 1rem;
-  margin-bottom:1rem;
-  transform: translate(47vw);
+  margin-bottom: 1rem;
+  transform: translate(200px);
 }
 
 .dark-theme .fa-sharp {
@@ -45,28 +42,27 @@ body {
   font-weight: 600;
 }
 .texto {
-  
-  display:flex;
+  display: flex;
   flex-direction: column;
   text-align: justify;
   justify-content: center;
   font-family: 'Roboto', sans-serif;
 }
 .texto p {
-  width:50%;
-  margin:auto;
+  width: 50%;
+  margin: auto;
 }
-.texto h1{
-  margin-left:24%;
-  margin-right:8rem;
+.texto h1 {
+  margin-left: 24%;
+  margin-right: 8rem;
 }
-.texto h3{
-  margin-left:24%;
-  margin-right:8rem;
+.texto h3 {
+  margin-left: 24%;
+  margin-right: 8rem;
 }
-.texto h4{
-  margin-left:24%;
-  margin-right:8rem;
+.texto h4 {
+  margin-left: 24%;
+  margin-right: 8rem;
 }
 
 .title1 {
@@ -124,10 +120,8 @@ li {
 }
 
 .menu {
-  display:flex;
-  
+  display: flex;
 }
-
 
 .menu a {
   color: #475569;
@@ -135,13 +129,11 @@ li {
   font-weight: bold;
   text-decoration: none;
   margin-left: 1.75rem;
-  
 }
 
-.menu:nth-child(2){
-  margin-right:100px;
+.menu:nth-child(2) {
+  margin-right: 100px;
 }
-
 
 .menu a:hover {
   color: #1e3a8a;
@@ -154,7 +146,6 @@ li {
 }
 
 .container-aside {
-  
   border-right: 2px solid #e2e8f0;
   padding-right: 0;
   flex-grow: 1;
@@ -164,10 +155,8 @@ li {
 }
 
 .container-aside img {
-  
   position: sticky;
   top: 0;
-  
 }
 
 #container-lista {
@@ -176,8 +165,8 @@ li {
   margin-left: 10rem;
   width: 100%;
 }
-#container-lista h2{
-  margin-right:48px;
+#container-lista h2 {
+  margin-right: 48px;
 }
 
 #titulo-lista {
@@ -187,38 +176,6 @@ li {
   margin-bottom: 1.5rem;
   color: #1e293b;
 }
-
-/* .container-filtro {
-  margin-bottom: 2.5rem;
-}
-
-#select-filtro {
-  color: #660;
-  padding: 0.7rem;
-  height: auto;
-  border: 1px solid #eaeaea;
-  border-radius: 2px;
-  box-shadow: none;
-  transition: all 0.2s linear;
-}
-
-#botao-filtro {
-  border-radius: 10px;
-  padding-top: 10px;
-  padding-right: 40px;
-  padding-left: 40px;
-  padding-bottom: 10px;
-  background-color: #1e293b;
-  color: #f1f5f9;
-  cursor: pointer;
-  border: none;
-}
-
-#botao-filtro:hover {
-  background-color: #94a3b8;
-  color: #0f172a;
-  transition: all 0.5s;
-} */
 
 .container-pesquisa {
   background: #e2e8f0;
@@ -231,10 +188,9 @@ li {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
-  
 }
-.container-pesquisa input{
- width: 70%;
+.container-pesquisa input {
+  width: 70%;
 }
 
 .container-pesquisa i {
@@ -280,8 +236,6 @@ li {
   background-color: #1e40af;
 }
 
-
-
 .item-texto {
   padding: 0.75rem;
   color: #334155;
@@ -305,44 +259,40 @@ li {
   width: 100%;
 }
 #form1 {
-  display:flex;
-  height:100%;
+  display: flex;
+  height: 100%;
   width: 100%;
-  margin:auto;
+  margin: auto;
   justify-content: center;
   flex-direction: column;
-
 }
-/*AQUELA UL QUE JEAN FEZ*/
 
-.lista1{
-  list-style-type:disc;
-  padding:2rem;
-  
-  display:flex;
-  width:65%;
+.lista1 {
+  list-style-type: disc;
+  padding: 2rem;
+
+  display: flex;
+  width: 65%;
   justify-content: center;
   text-align: justify;
   flex-direction: column;
-  margin:auto;
-
+  margin: auto;
 }
-/*______________________*/
+
 .painel-resultado {
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   width: 20rem;
-  height:5rem;
+  height: 5rem;
   background-color: #e2e8f0;
   align-items: center;
-  
-  margin:auto;
-  margin-bottom:1rem;
-  
+
+  margin: auto;
+  margin-bottom: 1rem;
+
   border: 1px solid #334155;
 }
-
 
 .painel-input {
   width: 100%;
@@ -350,39 +300,19 @@ li {
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-bottom:auto;
-  
+  margin-bottom: auto;
 }
 
-.painel-input div{
-
-  margin:1rem;
+.painel-input div {
+  margin: 1rem;
 }
-
-/* #item-botao {
-  border-radius: 10px;
-  padding-top: 10px;
-  padding-right: 40px;
-  padding-left: 40px;
-  padding-bottom: 10px;
-  line-height: 1;
-  background-color: #1e293b;
-  color: #f1f5f9;
-  cursor: pointer;
-}
-
-#item-botao:hover {
-  background-color: #94a3b8;
-  color: #0f172a;
-  transition: all 0.5s;
-} */
 
 .container-footer {
-  height:6rem;
-  display:flex;
+  height: 6rem;
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin:auto;
+  margin: auto;
 }
 
 .container-footer div {
@@ -402,17 +332,17 @@ li {
 }
 
 #toggle {
-  margin:10px;
-  margin-bottom:0px;
+  margin: 10px;
+  margin-bottom: 0px;
   -webkit-appearance: none;
   appearance: none;
   height: 40px;
   width: 75px;
   background-color: #15181f;
   position: absolute;
-  right:0;
-  bottom:1px;
-  top:0.1px;
+  right: 0;
+  bottom: 1px;
+  top: 0.1px;
   border-radius: 20px;
   outline: none;
   cursor: pointer;
@@ -420,7 +350,6 @@ li {
 }
 
 #toggle:after {
-  
   content: '';
   position: absolute;
   height: 30px;
@@ -472,19 +401,6 @@ li {
   color: #e2e8f0;
 }
 
-/* .dark-theme #select-filtro {
-  background-color: #e2e8f0;
-}
-
-.dark-theme #botao-filtro {
-  background-color: #ffffff;
-  color: #0f172a;
-}
-
-.dark-theme #botao-filtro:hover {
-  background-color: #94a3b8;
-  transition: all 0.5s;
-} */
 .dark-theme .container-pesquisa {
   background: #2f3640;
 }
@@ -523,14 +439,11 @@ li {
   color: #cbd5e1;
 }
 @media screen and (max-width: 940px) {
-
-
-  .menu{
-    display:flex;
-
+  .menu {
+    display: flex;
   }
-  .menu:nth-child(2){
-    margin-right:100px;
+  .menu:nth-child(2) {
+    margin-right: 100px;
   }
   .menu a {
     color: #475569;
@@ -538,112 +451,77 @@ li {
     font-weight: bold;
     text-decoration: none;
     margin-left: 1.75rem;
-    
   }
-  
 }
 
-
-@media screen and (max-width:788px) and (min-width: 721px){
-
+@media screen and (max-width: 788px) and (min-width: 721px) {
   .imagem-preview {
     min-width: 250px;
     min-height: 100px;
     background-color: #1e40af;
-    
   }
-  .container-pesquisa input{
+  .container-pesquisa input {
     width: 80%;
-   }
+  }
   .container-pesquisa {
     width: 230px;
-
   }
-  #logo{
-    font-size:40px;
-    margin-left:4px;
+  #logo {
+    font-size: 40px;
+    margin-left: 4px;
   }
-   
 }
 
 @media screen and (max-width: 720px) {
   .fotos {
-    margin:auto;
+    margin: auto;
     width: 70%;
     height: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
   }
   .texto p {
-    width:70%;
-    margin:auto;
+    width: 70%;
+    margin: auto;
   }
-  .texto h1{
-    margin-left:14%;
-    margin-right:8rem;
+  .texto h1 {
+    margin-left: 14%;
+    margin-right: 8rem;
   }
-  .texto h3{
-    margin-left:14%;
-    margin-right:8rem;
+  .texto h3 {
+    margin-left: 14%;
+    margin-right: 8rem;
   }
-  .texto h4{
-    margin-left:14%;
-    margin-right:8rem;
+  .texto h4 {
+    margin-left: 14%;
+    margin-right: 8rem;
   }
-  
 
-  #titulo-lista{
+  #titulo-lista {
     text-align: center;
   }
-  .container-pesquisa{
+  .container-pesquisa {
     margin: auto;
-    margin-bottom:6rem;
+    margin-bottom: 6rem;
   }
 
-  #container-lista h2{
-    margin-right:0;
+  #container-lista h2 {
+    margin-right: 0;
   }
- 
-  .menu:nth-child(2){
-    margin-right:25px;
+
+  .menu:nth-child(2) {
+    margin-right: 25px;
   }
-  #toggle {
-    margin:0px;
-    margin-top:10px;
-   -webkit-appearance: none;
-   appearance: none;
-   height: 40px;
-   width: 75px;
-   background-color: #15181f;
-   position: absolute;
-   left:45%;
-   border-radius: 20px;
-   outline: none;
-   cursor: pointer;
-   transition: all 0.5s;
- }
- 
- #toggle:after {
-   
-   content: '';
-   position: absolute;
-   height: 30px;
-   width: 30px;
-   background-color: #ffffff;
-   top: 5px;
-   left: 5px;
-   border-radius: 50%;
- }
-  .menu:nth-child(1){
-    margin-right:30px;
-    
+
+  .menu:nth-child(1) {
+    margin-right: 30px;
   }
-  .menu{
-    display:flex;
-    justify-content:center;
+  .menu {
+    display: flex;
+    justify-content: center;
   }
-  .container-aside{
-    border:none;
+  .container-aside {
+    border: none;
   }
   .container-main {
     flex-direction: column;
@@ -653,15 +531,13 @@ li {
   .container-aside img {
     position: sticky;
     top: 0;
-
-    
   }
-  
+
   .imagem-preview {
     width: 250px;
     height: 100px;
     background-color: #1e40af;
-    padding:20px;
+    padding: 20px;
   }
 
   #container-lista {
@@ -688,51 +564,117 @@ li {
     display: block;
   }
 
-  .logotipo {
-    margin: 5%;
-  }
-
   #logo {
     text-align: center;
   }
 
+  .logotipo {
+    font-size: 1.75rem;
+  }
+
+  .container-header {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .menu {
+    margin-top: 0.7rem;
+  }
+  .menu a {
+    font-size: 1rem;
+  }
+
+  .container-toggle {
+    position: initial;
+    height: 0;
+    margin-bottom: 0;
+  }
+
+  #toggle {
+    margin: 10px;
+    margin-bottom: 0px;
+    -webkit-appearance: none;
+    appearance: none;
+    height: 30px;
+    width: 30px;
+    background-color: #15181f;
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.5s;
+  }
+
+  #toggle:after {
+    content: '';
+    position: absolute;
+    height: 24px;
+    width: 24px;
+    background-color: #ffffff;
+    top: 2.5px;
+    left: 2.5px;
+    border-radius: 50%;
+  }
+
+  .dark-theme #toggle {
+    background-color: #f1f5f9;
+  }
+
+  .dark-theme #toggle:after {
+    background-color: transparent;
+    box-shadow: 10px 10px #15181f;
+    top: -7px;
+    left: -7px;
+  }
+
+  .lista-exercicios {
+    gap: 0px;
+  }
+
+  .fa-sharp {
+    font-size: 2.25rem;
+    transform: translate(50px);
+  }
+}
+
 @media screen and (max-width: 660px) {
   .fotos {
-    margin:auto;
+    margin: auto;
     width: 70%;
     height: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
   }
   .texto p {
-    width:70%;
-    margin:auto;
+    width: 70%;
+    margin: auto;
   }
-  .texto h1{
-    margin-left:14%;
-    margin-right:8rem;
+  .texto h1 {
+    margin-left: 14%;
+    margin-right: 8rem;
   }
-  .texto h3{
-    margin-left:14%;
-    margin-right:8rem;
+  .texto h3 {
+    margin-left: 14%;
+    margin-right: 8rem;
   }
-  .texto h4{
-    margin-left:14%;
-    margin-right:8rem;
+  .texto h4 {
+    margin-left: 14%;
+    margin-right: 8rem;
   }
-  
+
   .container-main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  
 
   .imagem-preview {
     width: 300px;
     height: 150px;
     background-color: #1e40af;
-    
   }
 
   #container-lista {
@@ -759,70 +701,63 @@ li {
     display: block;
   }
 
-  .logotipo {
-    margin: 5%;
-  }
-
   #logo {
     text-align: center;
+  }
+
+  .fa-sharp {
+    font-size: 2rem;
+    transform: translate(30px);
   }
 }
 
 @media screen and (max-width: 430px) {
   .fotos {
-    margin:auto;
+    margin: auto;
     width: 80%;
     height: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
   }
   .texto p {
-    width:80%;
-    margin:auto;
+    width: 80%;
+    margin: auto;
   }
-  .texto h1{
-    margin-left:14%;
-    margin-right:8rem;
+  .texto h1 {
+    margin-left: 14%;
+    margin-right: 8rem;
   }
-  .texto h3{
-
-    margin-left:14%;
-    margin-right:8rem;
+  .texto h3 {
+    margin-left: 14%;
+    margin-right: 8rem;
   }
-  .texto h4{
+  .texto h4 {
     word-spacing: 1%;
-    margin-left:9%;
-    margin-right:8rem;
+    margin-left: 9%;
+    margin-right: 8rem;
   }
-  
-  .div-input input{
+
+  .div-input input {
     width: 9rem;
   }
-  .container-footer{
-    margin:auto;
-    
+  .container-footer {
+    margin: auto;
   }
   .container-aside img {
     position: sticky;
     top: 0;
-    
-    
-    
   }
 
-  
   .container-main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  
 
   .imagem-preview {
     width: 250px;
     height: 100px;
     background-color: #1e40af;
-    
   }
 
   #container-lista {
@@ -849,23 +784,17 @@ li {
     display: block;
   }
 
-  .logotipo {
-    margin: 5%;
-  }
-
   #logo {
     text-align: center;
+  }
+
+  .fa-sharp {
+    transform: translate(10px);
   }
 }
 
 @media screen and (max-width: 679px) {
-  
-
-
-  .title1{
+  .title1 {
     margin-top: 20px;
   }
-
-}
-
 }
