--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,10 @@ li {
   margin-left: 1.75rem;
 }
 
+#a-lista {
+  color: #9f1239;
+}
+
 .menu:nth-child(2) {
   margin-right: 100px;
 }
@@ -605,7 +609,7 @@ li {
     bottom: 0;
     top: 0;
     right: 0;
-    border-radius: 20px;
+    border-radius: 999px;
     outline: none;
     cursor: pointer;
     transition: all 0.5s;
